configuracion de archivos